--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -13,7 +13,7 @@
 
         {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
         <div class="columns h-padding">
-          <div class="column col-3 hide-sm"></div>
+          <div class="column col-4 hide-sm"></div>
           <div class="column col-2">
             <button id="detail-submit" class="btn btn-primary b-margin-full">
               Save details
@@ -87,7 +87,7 @@
             <span class="form-icon far fa-envelope"></span>
           </div>
           <div class="form-group has-icon-left">
-            <input class="form-input" type="email" id="change-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="nope" data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
+            <input class="form-input" type="email" id="change-email-confirm" placeholder="Confirm new email" data-lpignore="true" autocomplete="nope" data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
             <span class="form-icon far fa-envelope"></span>
           </div>
 
