--- a/configuration/templates/volunteering/hours-log.hbs
+++ b/configuration/templates/volunteering/hours-log.hbs
@@ -53,7 +53,7 @@
       </div>
       <div class="column col-2 col-md-12">
         <strong class="show-md">Verified</strong>
-        <span class="far fa-{{#if verified}}check{{else}}cross{{/if}}"></span>
+        <span class="far fa-{{#if verified}}check{{else}}times{{/if}} text-{{#if verified}}success{{else}}error{{/if}}"></span>
       </div>
     </div>
     {{/each ~}}
