--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -122,7 +122,7 @@
                 {{!-- <input class="form-input input-lg" id="notes-{{task_id}}" name="notes" type="text" placeholder="" /> --}}
               </div>
               <div class="input-group">
-                <input class="form-input input-lg" id="hours-{{task_id}}" name="hours" type="number" step="any" min="0.1" value="" placeholder="0" required >
+                <input class="form-input input-lg" id="hours-{{task_id}}" name="hours" type="number" step="0.5" min="0.5" value="" placeholder="0" required >
                 <button type="submit" class="btn btn-primary btn-lg input-group-btn">Add hours</button>
               </div>
             </form>
