--- a/configuration/templates/account/auth/user-body-update.hbs
+++ b/configuration/templates/account/auth/user-body-update.hbs
@@ -20,6 +20,7 @@
         {{{json key='phone' value=phone}}},
         {{{json key='title' value=title}}},
         {{{json key='email' value=email}}},
+        {{{json key='email_consent' value=@root.data.accountInfo.email_consent}}},
         {{{json key='local_authority' value=local_authority}}},
         {{{json key='tsi_contact_email' value=tsi_contact_email}}},
         {{{json key='tsi_area' value=tsi_area}}},
