--- a/configuration/templates/utilities/search-postcode-lookup.hbs
+++ b/configuration/templates/utilities/search-postcode-lookup.hbs
@@ -11,14 +11,22 @@
     {{~/if ~}}
     {{~/each ~}}
     {{~/with ~}}",
-    "tsi_contact_email": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}}
+    "tsi_contact_email": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}},
     {{~#each contacts ~}}
     {{~#if (regexMatch ../../_source.place pattern "gi") ~}}
     {{email}}
     {{~/if ~}}
     {{~/each ~}}
     {{~/with ~}}",
-    {{#if _source.district ~}}
+    "tsi_title": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}}
+    {{~#each contacts ~}}
+      {{~#if (regexMatch ../../_source.place pattern "gi") ~}}
+        {{title}}
+      {{~/if ~}}
+    {{~/each ~}}
+    {{~/with ~}}",
+
+  {{#if _source.district ~}}
     "local_authority": {{{stringify (replace (replace (replace (replace _source.district " and " " & ") " Islands" "") "City of " "") " City" "")}}},
     {{else}}
     {{#if _source.county ~}}
