fix for the un_sustainable development goals problem

--- a/configuration/templates/pages/test.hbs
+++ b/configuration/templates/pages/test.hbs
@@ -8,7 +8,7 @@
           My volunteering details
         {{/if ~}}
       </h2>
-
+      {{join 'Zero Hunger' ';'}}
       {{!-- <div class="bg-warning x-padding"> --}}
       <h4 class="no-margin">Checklist: What is volunteering?</h4>
       <ul class="fa-ul">
@@ -22,6 +22,7 @@
         </li>
       </ul>
       {{!-- </div> --}}
+
 
 
       <div class="divider v-margin-full"></div>
