--- a/configuration/templates/account/auth/user-body-update.hbs
+++ b/configuration/templates/account/auth/user-body-update.hbs
@@ -15,6 +15,7 @@
         {{{json key='postcode' value=postcode}}},
         {{{json key='external_id' value=external_id}}},
         {{{json key='date_of_birth' value=@root.data.accountInfo.date_of_birth}}}, {{!-- Can't update DOB after first submit --}}
+        {{{json key='organisation_name' value=organisation_name}}},
         {{{json key='school_college_name' value=school_college_name}}},
         {{{json key='school_college_id' value=school_college_id}}},
         {{{json key='phone' value=phone}}},
