--- a/configuration/templates/pages/home-authenticated.hbs
+++ b/configuration/templates/pages/home-authenticated.hbs
@@ -37,7 +37,7 @@
     <div class="columns">
       <div class="column col-9 col-sm-12">
         <h3>
-          Support &amp; information
+          Support & information
         </h3>
         {{#if @root.data.accountInfo.postcode ~}}
         {{> local_contact_info}}
