--- a/configuration/templates/utilities/search-postcode-lookup.hbs
+++ b/configuration/templates/utilities/search-postcode-lookup.hbs
@@ -7,11 +7,11 @@
     "tsi_area": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}}
     {{~#each contacts ~}}
     {{~#if (regexMatch ../../_source.place pattern "gi") ~}}
-    {{~#if area~}}{{area}}{{else}}{{../local_authority}}{{~/if~}}
+    {{~#if area~}}{{{area}}}{{else}}{{{../local_authority}}}{{~/if~}}
     {{~/if ~}}
     {{~/each ~}}
     {{~/with ~}}",
-    "tsi_contact_email": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}},
+    "tsi_contact_email": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}}
     {{~#each contacts ~}}
     {{~#if (regexMatch ../../_source.place pattern "gi") ~}}
     {{email}}
