--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -103,16 +103,24 @@
                 <span class="text-gray">No hours added yet</span>
               </li>
               {{/compare ~}}
+              {{#unless (compare task_type "===" 'Copy Task')}}
               <li class="card-subtitle">
                 <span class="fa-li"><span class="far fa-id-card-alt"></span></span>
                 <a href="/task-edit/{{task_id}}">{{volunteer_manager_first_name}} {{volunteer_manager_last_name}}</a>
               </li>
-
+              {{else}}
+                <li class="card-subtitle">
+                  <span class="fa-li"><span class="far fa-trophy"></span></span>
+                  <span class="text-gray">Claimed task</span>
+                </li>
+              {{/unless}}
             </ul>
           </div>
           <div class="card-footer">
             <form action="/submit-hours" method="POST" data-component="TasksTrigger" {{#if admin}}data-success-destination="/hours/" data-destination-include-id="true"{{else}}data-success-destination="/hours"{{/if}} data-TasksTrigger="ajax-form-handler">
               <input type="hidden" name="task_id" value="{{task_id}}">
+              {{#unless (compare task_type "===" 'Copy Task')}}
+
               <label class="form-label" for="hours-{{task_id}}">
                 <strong>
                   {{#compare hours ">" 0 ~}}
@@ -123,7 +131,9 @@
                   {{/compare ~}}
                 </strong>
               </label>
-              <div class="input-group b-margin">
+
+          <div class="input-group b-margin">
+
                 <textarea class="form-input" id="notes-{{task_id}}" placeholder="Notes (optional)" rows="3"></textarea>
                 {{!-- <input class="form-input input-lg" id="notes-{{task_id}}" name="notes" type="text" placeholder="" /> --}}
               </div>
@@ -131,8 +141,10 @@
                 <input class="form-input input-lg" id="hours-{{task_id}}" name="hours" type="number" step="0.5" min="0.5" value="" placeholder="0" required >
                 <button type="submit" class="btn btn-primary btn-lg input-group-btn">Add hours</button>
               </div>
+      {{/unless }}
             </form>
           </div>
+
         </div>
       </div>
       {{/each ~}}
