--- a/configuration/templates/account/auth/sign-in-admin.hbs
+++ b/configuration/templates/account/auth/sign-in-admin.hbs
@@ -30,7 +30,7 @@
         Not registered?
       </h3>
       <div class="v-margin-full">
-        <a href="/sign-up-admin" class="btn btn-primary">Request approval</a>
+        <a href="/sign-up-admin" class="btn">Request approval</a>
       </div>
     </div>
   </div>
