--- a/configuration/templates/account/auth/sign-in.hbs
+++ b/configuration/templates/account/auth/sign-in.hbs
@@ -37,7 +37,7 @@
           Not registered?
         </h3>
         <div class="v-margin-full">
-          <a href="/sign-up" class="btn btn-primary">Sign up for a free account</a>
+          <a href="/sign-up" class="btn">Sign up for a free account</a>
         </div>
       </div>
     </div>
